# RFPAgent

./: .gitignore  README.md  pyproject.toml
main/: hybrid_search.py  main.py
parsing_pipeline/: chroma_db.py  ingestion.py  run_docling.py
parsing_pipeline/chroma_db/: chroma.sqlite3
parsing_pipeline/docs_md/: 00_Company_Overview_Capability_Statement.md  01_Certifications_Compliance_Registrations.md  02_Past_Performance_References.md  03_CV_Daniel_Whitfield.md  04_CV_Priya_Nair.md  05_CV_Marcus_Delgado.md  06_CV_Karen_Liu.md  07_CV_Anthony_Brooks.md  08_CV_Sofia_Reyes.md  09_PRJ-01_Pension_Cloud_IAM_ZeroTrust.md  10_PRJ-02_Nonprofit_Cloud_ERP.md  11_PRJ-03_Health_Data_Cloud_MSP.md  12_PRJ-04_State_Agency_AWS_Migration.md  13_PRJ-05_FinServ_Backup_DR_SOC2.md
rfp_rag/: README.md  __init__.py  api.py  cache.py  document_loader.py  evaluator.py  llm_judge.py  prompts.py  schemas.py
userinterface/: RFP_TechCorp_Cloud_2025.docx  hak.html  العرض-الفني-المقترح.doc
