[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "docling>=2.102.1",
    "fastapi[standard]>=0.124.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
]
